# rust_cmake_cibuildwheel_example

./: .gitignore  CMakeLists.txt  Cargo.toml  pyproject.toml
.github/workflows/: build_wheels.yml
src/: main.rs
